--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,4 +1,4 @@
-<footer class="padded-container" data-props="x:stretch space:l">
+<footer class="padded-container" data-props="x:start space:l">
     <div data-layout="stack slice">
         <hr/>
         <nav>
@@ -11,13 +11,13 @@
         </nav>
         {% include "partials/site-search.njk" %}
         <div>
-            <h2 data-heading="5">Subscribe</h2>
+            <h2 class="visually-hidden">Subscribe</h2>
             <p>
                 You can subscribe to the RSS feeds for
                 <a data-button="link" href="/feed.xml">all findings</a>.
             </p>
         </div>
-        <small>Made with HTML, CSS and zero line of Javascript. Generated from a Notion database using Eleventy.
+        <small>Made with HTML, CSS and runs without Javascript. Generated from a Notion database using Eleventy.
             <a data-button="link" rel="noopener nofollow noreferrer" target="_blank" href="https://twitter.com/nelioyann">Follow on
                 Twitter</a>
             for the latest updates.</small>
