--- a/src/pages/stories/story-page.njk
+++ b/src/pages/stories/story-page.njk
@@ -25,11 +25,11 @@ eleventyComputed:
                         <figcaption class="visually-hidden">Share link</figcaption>
                     </figure> #}
 {% block article %}
-    <header aria-labelledby="story-name" data-layout="stack" id="cover" data-props="space:m x:start">
+    <header aria-labelledby="story-name" data-layout="stack" id="cover" data-props="space:l x:start">
         {% if emojicon %}
-            <span data-heading="3" aria-hidden="true" data-font="emoji">{{ emojicon }}</span>
+            <span data-heading="1" aria-hidden="true" data-font="emoji">{{ emojicon }}</span>
         {% endif %}
-        <h1 itemprop="headline" id="story-name" data-heading="1" data-props="centered noBorder noMeasure">
+        <h1 itemprop="headline" id="story-name" data-heading="1" data-props="centered noBorder noMeasure space:2xs">
             {{ story.name }}
         </h1>
         <div data-layout="cluster">
@@ -46,26 +46,10 @@ eleventyComputed:
             <p>
                 <span aria-hidden="true" data-font="emoji">📁</span>
                 Filed under
-                <a href="/categories/{{ story.category.name | slugify }}" data-button="link small"># {{ story.category.name }}</a>
+                <a href="/categories/{{ story.category.name | slugify }}" data-button="link"># {{ story.category.name }}</a>
             </p>
             <link itemprop="thumbnailUrl" href="{{ thumbnail }}"/> {% set type = story.type.name %}
         </div>
-        {% if type == "Insight" %}
-            <div data-layout="box" data-props="noPad">
-                <header data-layout="box" data-props="noBorder invert">
-                    <span data-heading="6">
-                        <span data-font="emoji" aria-hidden="true">🔭</span>
-                        Finding  marked as Insight
-                    </span>
-                </header>
-                <div data-layout="box" data-props="noBorder">
-                    <p>
-                    Currently this finding does not include enough research based references. You can help improve its reliability in the
-                        <a href="#contribute">contribution section</a>
-                    </p>
-                </div>
-            </div>
-        {% endif %}
         <meta itemprop="description" content="{{ story.excerpt }}"/>
         <meta itemprop="teaches" content="{{ story.category.name }}"/>
     </header>
@@ -82,7 +66,7 @@ eleventyComputed:
         </div>
     </section>
     <section aria-labelledby="references">
-        <div data-layout="stack" data-props="space:xs">
+        <div data-layout="stack" data-props="x:start space:xs">
             <h2 id="references" data-heading="anchor">
                 <a href="#references">References</a>
             </h2>
@@ -92,6 +76,22 @@ eleventyComputed:
                     {% include "partials/reference-item.njk" %}
                 {% endfor -%}
             </ul>
+            {% if type == "Insight" %}
+                <div data-layout="box" data-props="noPad">
+                    <header data-layout="box" data-props="noBorder">
+                        <b data-heading="6">
+                            <span data-font="emoji" aria-hidden="true">◬</span>
+                            Finding  marked as Insight
+                        </b>
+                    </header>
+                    <div data-layout="box" data-props="noBorder">
+                        <p>
+                            Currently this finding does not include enough research based evidence. You can help support or refute its premises in the
+                            <a href="#contribute">contribution section</a> down below.
+                        </p>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </section>
     <section aria-labelledby="contribute">
@@ -99,21 +99,20 @@ eleventyComputed:
             <h2 id="contribute" data-heading="anchor">
                 <a href="#contribute">Contribution</a>
             </h2>
-                    <p>
-                        Share ideas, suggestions, or comments here 
-                    </p>
-                    <div data-layout="cluster" data-props="x:stretch" style="--threshold: var(--measure);">
-                        <a data-button="outline" data-props="x:center" href="{{ story_contribution_url }}" target="_blank">
-                            Submit an idea</a>
-                        <a
-                            data-button="outline"
-                            data-props="x:center"
-                            href="https://twitter.com/intent/tweet?text={{ story.name }}%20via%20@FrontendStories&url={{ meta.site_url }}{{ page.url }}"
-                            target="_blank">
-                            Share on Twitter</a>
-                    </div>
+            <p>
+                Share ideas, suggestions, or comments here
+            </p>
+            <div data-layout="cluster" data-props="x:stretch" style="--threshold: var(--measure);">
+                <a data-button="outline" data-props="x:center" href="{{ story_contribution_url }}" target="_blank">
+                    Add a remark</a>
+                <a
+                    data-button="outline"
+                    data-props="x:center"
+                    href="https://twitter.com/intent/tweet?text={{ story.name }}%20via%20@FrontendStories&url={{ meta.site_url }}{{ page.url }}"
+                    target="_blank">
+                    Mention on Twitter</a>
+            </div>
         </div>
-
     </section>
     <section aria-label="Navigate" data-layout="stack">
         <h2 data-heading="6" id="pagination-nav" data-props="space:s">Navigate to other findings</h2>
@@ -133,6 +132,5 @@ eleventyComputed:
                 </a>
             {% endif %}
         </nav>
-
     </section>
 {% endblock %}
