style: 🎨 various responsive improvements

--- a/src/_includes/partials/reference-item.njk
+++ b/src/_includes/partials/reference-item.njk
@@ -4,5 +4,5 @@
             {{ reference.name }}
         </span>
     </a>
-    | {{ reference.citation if reference.citation else reference.cite }}
+    | {{ reference.cite if reference.cite }}
 </li>
