--- a/src/pages/stories/stories-thumbnails.njk
+++ b/src/pages/stories/stories-thumbnails.njk
@@ -10,6 +10,8 @@ eleventyExcludeFromCollections: true
 <svg width="1200" height="630" viewBox="0 0 1200 630" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     
     {% set titleInLines = story.name | splitlines %}
+    {% set absoluteStoryUrl = story.slug | absoluteUrl(meta.site_url)  %}
+    {% set qrCodeSize = 200 %}
     {% set numberOfLines = titleInLines.length %}
     {% if numberOfLines == 1 %}
         {% set verticalStartingPoint = 340 %}
@@ -24,20 +26,23 @@ eleventyExcludeFromCollections: true
 
     <rect width="100%" height="100%" fill="{{meta.background_color or 'white'}}" />
 
-    <text text-anchor="start" font-family="Helvetica, sans-serif" font-size="100">
-        <tspan  x="80" y="350">🎓</tspan>
-    </text>
+    
 
-    <line x1="300" y1="80" x2="300" y2="548" stroke="black" />
+    <image x="{{(300 - qrCodeSize) * 0.5}}" y="{{(630 * 0.5) - (qrCodeSize * 0.5)}}" width="{{qrCodeSize}}" height="{{qrCodeSize}}" xlink:href="{{absoluteStoryUrl| qrcode }}"/>
+    <line x1="300" y1="80" x2="300" y2="548" stroke="{{meta.color}}" />
 
     <text font-family="Helvetica, sans-serif" font-size="30">
-        <tspan x="350" y="{{verticalStartingPoint - 90}}">{{ meta.site_name }}</tspan>
+        <tspan x="350" y="{{verticalStartingPoint - 90}}">#{{ story.category.name }}</tspan>
     </text>
     
-    <text id="text" font-family="Helvetica, sans-serif" font-size="70" >
+    <text id="text" font-family="Helvetica, sans-serif" font-size="60" >
     {% for line in titleInLines %}
         <tspan x="350" y="{{verticalStartingPoint + loop.index0 * 80}}">{{line}}</tspan>
     {% endfor %}
+    </text>
+
+    <text font-family="Helvetica, sans-serif" font-size="30">
+        <tspan x="350" y="{{verticalStartingPoint + numberOfLines * 80}}">{{ meta.twitter_name }}</tspan>
     </text>
 
 </svg>
