--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -17,9 +17,7 @@
                 <a data-button="link" href="/feed.xml">all findings</a>.
             </p>
         </div>
-        <small>Made with HTML, CSS and runs without Javascript. Generated from a Notion database using Eleventy.
-            <a data-button="link" rel="noopener nofollow noreferrer" target="_blank" href="https://twitter.com/nelioyann">Follow on
-                Twitter</a>
-            for the latest updates.</small>
+        <small>Generated from a Notion database using Eleventy and served over Netlify.
+            </small>
     </div>
 </footer>
