chore: smol ajustments

--- a/src/pages/feed.njk
+++ b/src/pages/feed.njk
@@ -1,6 +1,6 @@
 ---
 permalink: "feed.xml"
-eleventyExcludeFromCollections: false
+eleventyExcludeFromCollections: true
 tags:
     - webpage
 title: "Subscribe to RSS"
